[ADD+FIX] Improved date formatting and responsive design: updated date display in user and organization components, enhanced layout responsiveness in CSS, and adjusted flex properties for better alignment.

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -32,12 +32,15 @@ body {
 button,
 input[type="submit"] {
   cursor: pointer;
+  text-wrap: nowrap;
 }
 
 .generalBody {
   background-color: aliceblue;
   width: 100%;
-  height: 100%;
+  height: 100% !important;
+  min-height: fit-content;
+  max-height: fit-content;
   padding: 0 1rem 0 1rem;
   display: flex;
   flex-direction: column;
@@ -438,4 +441,126 @@ main.dashboardMain {
   flex: 0.7;
   display: flex;
   background-color: rgb(252, 249, 249)
+}
+
+
+
+@media screen and (max-width:1280px) {
+  .landingPageBody {
+    padding: 0;
+  }
+
+  .dashboard-container {
+    flex: 1;
+  }
+
+  .generalBody {
+    padding: 0;
+    align-items: center;
+    width: 100%;
+    height: 100%;
+  }
+
+  .pseudo40-col {
+    flex: 0.2;
+  }
+
+  .dashboard-nav {
+    background-color: rgb(245, 243, 250);
+    flex: 0.4;
+    height: 100%;
+    display: flex;
+    align-items: start;
+    padding: 5rem 0;
+  }
+
+  .landingHeader {
+    width: 100%;
+  }
+
+  .landingMain,
+  .registerMain,
+  .loginMain,
+  .verificationMain {
+    padding: 2rem 1rem;
+  }
+
+  .businessCardWrapper,
+  .registerWrapper,
+  .loginWrapper {
+    width: 80%;
+    min-height: 70%;
+    max-height: 80%;
+    padding: 0.3rem;
+  }
+
+  .businessInfo {
+    padding: 1rem;
+  }
+
+  .businessDesc {
+    padding: 0 0.5rem;
+  }
+
+  .authCol {
+    padding: 1rem;
+  }
+
+  form#registerForm input[type="text"],
+  form#loginForm input[type="text"],
+  form#loginForm input[type="password"],
+  form#registerForm input[type="password"] {
+    border-radius: 45px;
+    width: 90%;
+    padding: 0.3rem 0.6rem;
+
+  }
+
+}
+
+@media screen and (max-width:800px) {
+
+  .businessCardWrapper,
+  .registerWrapper,
+  .loginWrapper {
+    width: 100%;
+    min-height: 100%;
+    max-height: 100%;
+    padding: 0.3rem;
+
+  }
+
+  .dashboard-container {
+    flex: 1;
+  }
+}
+
+@media screen and (max-width:600px) {
+  .generalBody {
+    padding: 0;
+    width: 100% !important;
+    min-width: 100% !important;
+    border: 3px solid red;
+  }
+
+  main.dashboardMain {
+    min-width: 100 !important;
+    width: 100% !important;
+    min-height: 100vh;
+    padding: 1rem 0;
+    justify-content: start;
+  }
+
+  .dashboard-container {
+    flex: 1;
+  }
+
+  .dashboard-nav {
+    display: none
+  }
+
+  .dashboard-content-wrapper {
+    flex: 1;
+  }
+
 }
